--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <ul class="head-soc-list">
           <li class="head-soc-item">
             <a href="" class="head-soc-link"
-              ><svg width="32" height="32" class="head-menu-icon">
+              ><svg width="24" height="24" class="head-menu-icon">
                 <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li class="head-soc-item">
             <a href="" class="head-soc-link">
-              <svg width="32" height="32" class="head-menu-icon">
+              <svg width="24" height="24" class="head-menu-icon">
                 <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
@@ -102,7 +102,7 @@
             of pure delight!
           </h1>
           <div class="hero-btn-box">
-            <button type="button" class="hero-btn">Buy</button>
+            <button type="button" class="hero-btn">Buy now</button>
             <a href="#made" class="hero-btn-link">How it’s made</a>
             <a href="#footer" class="hero-link"
               >scroll down
